# egui-ssh-config-editor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  ssh_config.rs
