[package]
name = "egui-ssh-config"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
rfd = "0.15"
glob = "0.3"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }

[build-dependencies]
winresource = "0.1.23"

[profile.release]
lto = true
strip = true

[[bin]]
name = "egui-ssh-config"
path = "src/main.rs"